test/libyul/yulSyntaxTests/number_literal_2.yul
{ let x := .1 }
// ----
// ParserError 4828: (11-13): Invalid number literal.
